Closed Bug 659207 Opened 14 years ago Closed 14 years ago

--enable-shared-js builds are broken

Categories

(Core :: DOM: Core & HTML, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla6
Tracking Status
firefox5 - affected

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

Actually, any build that tries to use js::ForceFrame without statically linking JS, because the destructor is inline but uses non-exported stuff. This broke all my builds, for example. :(
OS: Mac OS X → All
Priority: -- → P1
Hardware: x86 → All
Comment on attachment 534648 [details] [diff] [review] Don't inline a constructor that consumers can't actually inline without statically linking to JS. It makes me sad that this is necessary.
Attachment #534648 - Flags: review?(luke) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla6
No need to track: release drivers are conflicted on whether we'd take a patch which doesn't affect our release builds on the beta channel...
Comment on attachment 534648 [details] [diff] [review] Don't inline a constructor that consumers can't actually inline without statically linking to JS. I think we should take this for beta.
Attachment #534648 - Flags: approval-mozilla-beta?
Attachment #534648 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
This doesn't apply cleanly to mozilla-beta. Rescinding approval as we are late in beta anyway.
Attachment #534648 - Flags: approval-mozilla-beta+ → approval-mozilla-beta-
Um... Making this apply cleanly is a trivial merge, which I was going to do on Monday. Either way, though. I guess it doesn't matter that much if our beta and fx5 can't be built in some supported configurations....
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: