Bug 659207.  Don't inline a constructor that consumers can't actually inline without statically linking to JS.  r=luke a=sheriff