js/src/jswrapper.h
@@ -168,6 +168,7 @@ class JS_FRIEND_API(ForceFrame)
 
   public:
     ForceFrame(JSContext *cx, JSObject *target);
+    ~ForceFrame();
     bool enter();
 };
 
